--- a/HelixCoordinates/packages.config
+++ b/HelixCoordinates/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommandLineParser" version="2.8.0" targetFramework="net472" />
   <package id="geometry3Sharp" version="1.0.324" targetFramework="net472" />
   <package id="QuantumConcepts.Formats.STL" version="1.3.1" targetFramework="net472" />
 </packages>
